Prevent sidebar from collapsing in desktop mode.

--- a/plugins/gatsby-content-docgen/layouts/assets/styles.less
+++ b/plugins/gatsby-content-docgen/layouts/assets/styles.less
@@ -2,4 +2,27 @@
 @import "font-awesome/fontawesome.less";
 @import "font-awesome/fa-solid.less";
 @import "adminlte/AdminLTE.less";
-@import "adminlte/skins/skin-black.less";
+@import "adminlte/skins/skin-blue.less";
+
+@media (min-width: @screen-sm) {
+  .sidebar-toggle {
+    display: none;
+  }
+}
+
+// Prevent the collapse css from actually collapsing the sidebar when in desktop mode.
+.main-sidebar {
+  body.sidebar-collapse & {
+    @media (min-width: @screen-sm) {
+      .translate(0, 0);
+    }
+  }
+}
+.content-wrapper,
+.main-footer {
+  .sidebar-collapse & {
+    @media (min-width: @screen-sm) {
+    .translate(@sidebar-width, 0);
+    }
+  }
+}
